--- a/CapaPresentacion/bin/CapaPresentacion.dll.config
+++ b/CapaPresentacion/bin/CapaPresentacion.dll.config
@@ -20,6 +20,6 @@
   </system.codedom>
 
   <connectionStrings>
-    <add connectionString="Data Source=DESKTOP-674RLQT ; Initial Catalog=WebTiendaSalud;User ID=sa;Password=root" providerName="System.Data.SqlClient" name="Conexion"/>
+    <add connectionString="Data Source=DESKTOP-674RLQT ; Initial Catalog=WebTiendaSaludTestv1;User ID=sa;Password=root" providerName="System.Data.SqlClient" name="Conexion"/>
   </connectionStrings>
 </configuration>
